# wayfare

./: .gitignore  e HEAD  package.json  tatus
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: gen_icon.py
src-tauri/src/: lib.rs  main.rs
